--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-themes": "^0.3.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
